# architecture-context

./: .env.example  .gitignore  .golangci.yml  AGENT_USAGE.md  Makefile  README.md  agent-loop-example.py  main.py  platforms.yaml  pyproject.toml
architecture/: current-ga  early-access  future-ga  latest-released  newest
diagrams/: KUBEFLOW_GENERATED_ARCHITECTURE.md  README.md  kubeflow-notebook-controllers-c4-context.dsl  kubeflow-notebook-controllers-component.mmd  kubeflow-notebook-controllers-dataflow.mmd  kubeflow-notebook-controllers-dependencies.mmd  kubeflow-notebook-controllers-rbac.mmd  kubeflow-notebook-controllers-security-network.txt  workspace.dsl  workspace.json
docs/: ARCHITECTURE-DIAGRAM-PROPOSAL.md  ARCHITECTURE-DIAGRAM-REQUIREMENTS.md  webhooks.md
lib/: README.md  __init__.py  agent_runner.py  build_info.py  cli.py  component_discovery.py  fetch.py  kustomize_context.py  manifest_parser.py  phases.py  progress.py  strace_transport.py  webhook_analyzer.py
overlays/: 0001-kfp-sdk-2.16-in-rhoai-3.4.md  0002-mlflow-go-sdk.md  0003-llama-stack-renamed-to-ogx.md  0004-codeflare-sdk-missing-from-component-inventory.md  0005-codeflare-sdk-0.37.0-ray-2.54.1.md  0005-codeflare-sdk-0.38.0-ray-2.55.1.md  0005-evalhub-custom-provider-adapter-contract.md  0005-hardwareprofile-platform-capability.md  0006-connection-api-platform-capability.md  0007-kueue-integration-platform-capability.md  0008-no-external-operator-auto-install-policy.md  0009-training-hub-fine-tuning-stack-integration.md  001-kfp-sdk-2.16-in-rhoai-3.5.md  0010-project-navigator-naming.md  (+9 more)
(+8535 files in other folders)
