[project]
name = "kahowell-rhoai-architecture-diagrams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.68",
    "pyyaml>=6.0.3",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
target-version = "py313"
exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
